--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -2,9 +2,10 @@
 // Base document colors
 $body-bg: #181818;
 $body-color: white;
-$link-color: #e57d7d;
-$navbar-bg: #e57d7d;
+$link-color: #9085ab;
+$navbar-bg: #9085ab;
 $font-family: "Gill Sans", sans-serif;
+//OTHER color: #e57d7d;
 
 // Code blocks
 $code-block-bg-alpha: -.8;
